@@ -34,6 +34,8 @@ endif::[]
 ===== Bug fixes
 * Fix instrumentation error for HttpClient - {pull}1402[#1402]
 * Eliminate `unsupported class version error` messages related to loading the Java 11 HttpClient plugin in pre-Java-11 JVMs {pull}1397[1397]
+* Fix rejected metric events by APM Server with response code 400 due to data validation error - sanitizing Micrometer
+metricset tag keys - {pull}1413[1413]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
